# chip8

./: CMakeLists.txt  README.md  compile_flags.txt
chip8-roms/: README
include/: chip8.hpp  sdl.hpp  structs.hpp
src/: chip8.cpp  main.cpp  sdl.cpp
